--- a/accounts-config.yaml
+++ b/accounts-config.yaml
@@ -4,20 +4,20 @@ mandatoryAccounts:
   # The "name" value DOES NOT need to match the account name
   - name: Management
     description: The management (primary) account. Do not change the name field for this mandatory account. Note, the account name key does not need to match the AWS account name.
-    email: herikams+prossegur_management@amazon.com
+    email: herika+lza_prodam_management@amazon.com
     organizationalUnit: Root
   - name: LogArchive
     description: The log archive account. Do not change the name field for this mandatory account. Note, the account name key does not need to match the AWS account name.
-    email: herikams+prossegur_log@amazon.com
+    email: herika+lza_prodam_log@amazon.com
     organizationalUnit: Security
   - name: Audit
     description: The security audit account (also referred to as the audit account). Do not change the name field for this mandatory account. Note, the account name key does not need to match the AWS account name.
-    email: herikams+prossegur_audit@amazon.com
+    email: herika+lza_prodam_audit@amazon.com
     organizationalUnit: Security
 workloadAccounts:
   - name: prossegur_lza_external
     description: >- 
         Conta que irá realizar os processos de Network da BP e centralizaçã do trafego
-    email: herikams+prossegur_lza_external@amazon.com
-    organizationalUnit: Infrastructure
+    email: herika+lza_prodam_external@amazon.com
+    organizationalUnit: Root
     warm: false
