--- a/accounts-config.yaml
+++ b/accounts-config.yaml
@@ -4,20 +4,20 @@ mandatoryAccounts:
   # The "name" value DOES NOT need to match the account name
   - name: Management
     description: The management (primary) account. Do not change the name field for this mandatory account. Note, the account name key does not need to match the AWS account name.
-    email: herikams+lza_teste_management@amazon.com 
+    email: herikams+prodam_lza_root_ct@amazon.com
     organizationalUnit: Root
   - name: LogArchive
     description: The log archive account. Do not change the name field for this mandatory account. Note, the account name key does not need to match the AWS account name.
-    email: herikams+lza_teste_log@amazon.com
+    email: herikams+prodam_lza_root_ct_logarchive@amazon.com
     organizationalUnit: Security
   - name: Audit
     description: The security audit account (also referred to as the audit account). Do not change the name field for this mandatory account. Note, the account name key does not need to match the AWS account name.
-    email: herikams+lza_teste_audit@amazon.com
+    email: herikams+prodam_lza_root_ct_audit@amazon.com
     organizationalUnit: Security
 workloadAccounts:
-  - name: lza_external_teste
+  - name: prodam_lza_root_ct_external
     description: >- 
        Conta que irá realizar os processos de Network da BP e centralizaçã do trafego
-    email: herikams+lza_external_teste@amazon.com
+    email: herikams+prodam_lza_root_ct_external@amazon.com
     organizationalUnit: Infrastructure
     warm: false
